<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_select_page"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/action_select_page"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="5"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_today"
        android:orderInCategory="9"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/action_today"/>
    <item
        android:id="@+id/action_select_date"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/action_select_date"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="15"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        android:title="@string/action_refresh"/>
    <!-- 
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="50"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        android:title="@string/action_refresh"/>
 -->
    <item
        android:id="@+id/action_open_with"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_open_with"/>
</menu>
